@@ -1,3 +1,9 @@
+2008-08-05  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/tk.h, generic/tkEvent.c: Fix for [Bug 2010422]
+	"no event type or button # or keysym while executing
+	"bind Listbox <MouseWheel> [...]".
+
 2008-08-03  Ania Pawelczyk  <aniap@users.sourceforge.net>
 
 	* test/cmds.test:  Update to tcltest2
